1.1.2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8738: Unexpected behaviour with options->colPadding.


1.1.1 - Monday 07 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8525: ConsoleInput::getHelpTable() exits with a fatal error.
- Fixed bug #8645: Default values not set correctly in ezcConsoleInput.


1.1 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8460: ConsoleOption is a class and should have properties instead
  of public variables.
- Fixed bug #8472: Update documentation for ezcConsoleTableOptions.


1.1rc1 - Monday 29 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request #7792: Possibility to omit the short options.
- Refactored to use the new ezcBaseOptions class.


1.1beta2 - Tuesday 09 May 2006 
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8173: ezcConsoleInput::getHelpText() does return empty synopsis.


1.1beta1 - Wednesday 19 April 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added getHelpTable() and getHelpText() methods to ezcConsoleInput for more
  convenient help output generation.
- Added ezcConsoleOption::$isHelpOption flag to indicate, that an option is to
  request help. If this flag is set and the option is submitted by the user,
  rule checking (dependencies/exclusions/madatoryness) is disabled.
- Added ezcConsoleInput::helpOptionSet() method which returns if an option
  that was defined to be a help option was submitted.
- Added the class ezcConsoleProgressMonitor that is capable of printing status
  information and percentage progress to the console.


1.0.1 - Monday 06 March 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
